vlib/v/checker/tests/defer_in_for.vv
fn main() {
	for true {
		defer {
			break
		}
	}
}
